--- a/assignment_two/requirements.txt
+++ b/assignment_two/requirements.txt
@@ -2,12 +2,20 @@ beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
 colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
+fonttools==4.56.0
 idna==3.10
+kiwisolver==1.4.8
+matplotlib==3.10.1
 mypy==1.15.0
 mypy-extensions==1.0.0
 numpy==2.2.3
+packaging==24.2
 pandas==2.2.3
 pandas-stubs==2.2.3.241126
+pillow==11.1.0
+pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
